# whisper-desktop

./: .gitignore  README.md  package-lock.json  package.json
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src-tauri/src/commands/: autostart.rs  contacts.rs  identity.rs  messages.rs  mod.rs  notifications.rs  relay.rs  settings.rs
src-tauri/src/crypto/: encryption.rs  keys.rs  mod.rs  signature.rs
src-tauri/src/relay/: client.rs  mod.rs  protocol.rs  queue.rs
src-tauri/src/storage/: contacts.rs  database.rs  identity.rs  messages.rs  mod.rs  settings.rs
src-tauri/src/sync/: device.rs  mod.rs
src-tauri/src/system/: autostart.rs  mod.rs  notifications.rs  tray.rs
src/components/: index.ts
src/components/chat/: MessageBubble.tsx  MessageInput.tsx  MessageList.tsx  index.ts
src/components/common/: Button.tsx  ErrorBoundary.tsx  Input.tsx  index.ts
src/components/layout/: Sidebar.tsx  TitleBar.tsx  index.ts
src/pages/: ChatPage.tsx  ContactsPage.tsx  ConversationsPage.tsx  LinkDevicePage.tsx  OnboardingPage.tsx  SettingsPage.tsx  UnlockPage.tsx  index.ts
src/stores/: contacts.ts  identity.ts  index.ts  messages.ts  settings.ts
src/types/: contact.ts  identity.ts  index.ts  message.ts  settings.ts
