[package]
name = "whisper-desktop"
version = "0.1.0"
description = "Whisper encrypted messaging desktop client"
authors = ["Katie"]
edition = "2021"
license = "MIT"

[lib]
name = "whisper_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Crypto
ed25519-dalek = { version = "2", features = ["rand_core"] }
x25519-dalek = { version = "2", features = ["static_secrets"] }
chacha20poly1305 = "0.10"
argon2 = "0.5"
rand = "0.8"
sha2 = "0.10"
bs58 = "0.5"

# Storage
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"] }

# Async
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"

# Utilities
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3"

